changed api data

--- a/package.json
+++ b/package.json
@@ -2,10 +2,8 @@
   "name": "mystockapp",
   "version": "0.1.0",
   "private": true,
-  "proxy":  {
-      "/asx-research": "https://asx.api.markitdigital.com",
-      "/api": "https://www.marketindex.com.au"
-  },
+  "proxy":   "https://asx.api.markitdigital.com",
+      
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
